# LSP-yod-dalet-proj

./: .editorconfig  .gitignore  README.md  dune-project
server_proj/: Main.ml  dune  dune-project  dune-workspace  jovial-lsp.opam  lexer.mll  parser.mly  server.ml
server_proj/_build/: .db  .digest-db  log
server_proj/_build/default/: jovial-lsp.install
server_proj/_build/default/.dune/: configurator.v2
server_proj/_build/default/lib/: analyze.ml  analyze.mli  ast.ml  ast.mli  document.mli  handlers.ml  handlers.mli  jovial_lsp_lib.cma  jovial_lsp_lib.cmxa  jovial_lsp_lib.cmxs  jovial_lsp_lib.ml-gen  lexer.ml  lexer.mll  lsp_convert.ml  lsp_io.ml  parse.ml  (+13 more)
server_proj/_tmp_examples/: TINYCOMP.j73
server_proj/examples/: MAINCOMP.j73  MAINMODULE (1).j73  MAINSYSCOMP.j73  README.md  UTIL.j73
server_proj/lib/: README.md  analyze.ml  analyze.mli  ast.ml  ast.mli  document.ml  dune  handlers.ml  handlers.mli  lexer.mll  lsp_convert.ml  lsp_server.ml  parse.ml  parser.mly  preprocess.ml  symbols.ml  symbols.mli  text_index.ml  text_index.mli  workspace.ml  workspace.mli  workspace_index.ml
server_proj/lib/lsp/: lsp_conv.ml  lsp_conv.mli  lsp_io.ml  lsp_io.mli  lsp_server.ml  lsp_server.mli
server_proj/lib/syntax/: ast.ml  ast.mli  dune  lexer.mll  parse.ml  parse_diags.ml  parse_diags.mli  parser.mly  preprocess.ml  preprocess.mli
server_proj/lib/workspace/: README.md  document.ml  document.mli  uri_path.ml  workspace.ml  workspace.mli  workspace_index.ml  workspace_index.mli
server_proj/test/: define_navigation_test.ml  dune  scope_navigation_test.ml
(+207 files in other folders)
