(executable
 (name define_navigation_test)
 (libraries jovial_lsp_lib yojson))

(rule
 (alias runtest)
 (action (run %{exe:define_navigation_test.exe})))

(executable
 (name scope_navigation_test)
 (libraries jovial_lsp_lib yojson))

(rule
 (alias runtest)
 (action (run %{exe:scope_navigation_test.exe})))
